--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>hi barry</h1>
+    <h1>hi barry man</h1>
     <h2>hello
     </h2>
 </body>
